--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -47,3 +47,8 @@ h5 {font-size: 0.83em;}
 *::-webkit-scrollbar-corner {
     background-color: transparent;
 }
+
+*::-webkit-scrollbar {
+    display: none;
+}
+    
