--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -234,7 +234,7 @@
 
 .sub_img2 div p { font-size: 1.5rem; line-height: 170%; color: var(--white); text-align: center; } 
 
-.sub_img2 div p b {font-weight: 500;}
+.sub_img2 div p b { font-weight: 500; } 
 
 .sub_img_cont { position: relative; width: 100%; } 
 
@@ -274,7 +274,7 @@
 
 .vision .info dl dd { margin-top: 20px; } 
 
-.vision .info dl dd .sub_list .fs_13 {font-size: 13px;}
+.vision .info dl dd .sub_list .fs_13 { font-size: 13px; } 
 
 .ceo .bg { padding: 54px 0 130px; background: url(../../resources/img/sub/img_ceo_bg.jpg) no-repeat left center; background-size: cover; } 
 
@@ -322,7 +322,7 @@
 
 .corporate .list .business_cont dl dt { font-size: 1.4rem; color: var(--basic_blue); } 
 
-.corporate .list .business_cont dl dd { font-size: 1.4rem; color: var(--000); line-height: 160%; } 
+.corporate .list .business_cont dl dd { font-size: 1.4rem; color: var(--black); line-height: 160%; } 
 
 .history1 { padding: 60px 0; background: var(--pastel_blue); } 
 
@@ -378,7 +378,7 @@
 
 .contact .form .item dl.job dd .c_radio { width: 50%; } 
 
-.contact .form .item dl.business_area dd .c_radio.fs_13>input[type="radio"]+label {font-size: 13px;}
+.contact .form .item dl.business_area dd .c_radio.fs_13>input[type="radio"]+label { font-size: 13px; } 
 
 .contact .form .item dl.privacy dd { gap: 14px; } 
 
@@ -424,7 +424,7 @@
 
 .philosophy3 .text { margin-bottom: 50px; text-align: center; } 
 
-.philosophy3 .text b { font-size: 2.4rem; color: var(--basic_blue); } 
+.philosophy3 .text b { font-size: 2.4rem; font-weight: 400; color: var(--basic_blue); } 
 
 .philosophy3 .text p { margin-top: 14px;; font-size: 1.6rem; } 
 
@@ -454,7 +454,7 @@
 
 .philosophy4 .text { margin-bottom: 50px; text-align: center; } 
 
-.philosophy4 .text b { font-size: 2.2rem; line-height: 150%; color: var(--white); } 
+.philosophy4 .text b { font-size: 2.2rem; font-weight: 400; line-height: 150%; color: var(--white); } 
 
 .philosophy4 .text p { margin-top: 14px;; font-size: 1.6rem; color: var(--white); } 
 
@@ -510,11 +510,11 @@
 
 .business ul li .text .c_btn_wrap .c_btn2:after { width: 22px; height: 14px; margin-left: 7px; background: url(../../resources/img/main/icon_arrow_right_blue.svg) no-repeat; background-size: cover; } 
 
-.business ul li .icon  { padding: 23px 14px 33px; background-color: var(--pastel_blue); border-radius: 10px;; } 
+.business ul li .icon { padding: 23px 14px 33px; background-color: var(--pastel_blue); border-radius: 10px;; } 
 .business ul li .icon .sub_list { margin-top: 0; gap: 0;; } 
 
 .business ul li .icon a img { display: block; width: 37.777vw; max-width: 162px; margin: 33px auto 0; } 
-.business.energy ul { gap:40px; column-gap: 0;} 
+.business.energy ul { gap:40px; column-gap: 0; } 
 
 .sub_title2.chemical { background: url(../../resources/img/sub/img_chemical_bg.jpg) no-repeat; background-size: cover; background-position-x: 18%; padding-bottom: 60px;; } 
 
@@ -525,6 +525,40 @@
 
 .sub_title2.energy { background: url(../../resources/img/sub/img_energy_bg.jpg) no-repeat; background-size: cover; } 
 .sub_title2.energy .c_btn_wrap { margin-bottom: 0; } 
+
+.process { padding-bottom:80px; } 
+.process .c_tab_content { display: flex; flex-direction: column; margin:50px 24px 0; } 
+.process .c_tab_content .item { position: relative; } 
+.process .c_tab_content .item:nth-child(n+2) { padding-top:104px; } 
+.process .c_tab_content .item:nth-child(n+2):before { content:''; position:absolute; top:54px; left:0; right:0; width:100%; height:1px; background-color:var(--grey06) } 
+.process .c_tab_content .item b { display:block; margin-bottom:36px; font-size: 2.0rem; font-weight:500; line-height: normal; color: var(--basic-dark-navy); } 
+.process .c_tab_content .item ul { display: flex; column-gap: 15px; justify-content: space-between; align-items: center; margin-top: 5.833vw; } 
+.process .c_tab_content .item ul.second { flex-direction: row-reverse; justify-content: space-between; } 
+.process .c_tab_content .item ul li { position:relative; border-radius: 500px; border: 1px solid #DEE3EE; background: var(--pastel_blue); } 
+.process .c_tab_content .item ul li.type1 { background-color:var(--white); border-color:var(--basic_blue); } 
+.process .c_tab_content .item ul li.type1 span { color:var(--basic_blue) } 
+.process .c_tab_content .item ul li.type2 { border: none; background-color:var(--basic_blue); } 
+.process .c_tab_content .item ul li.type2 span { color:var(--white) } 
+.process .c_tab_content .item ul li:nth-child(1):before,
+.process .c_tab_content .item ul li:nth-child(2):before,
+.process .c_tab_content .item ul li:nth-child(3):before { content:''; position:absolute; top:50%; right: -4vw; transform: translate(0,-50%); width:2.5vw; height: 3.88vw; background:url(
+ ../../resources/img/main/icon_arrow_right_grey.svg) no-repeat; background-size: cover; } 
+
+.process .c_tab_content .item ul li:nth-child(3):before { top: 100%; right: 50%; transform: translate(50%, 50%) rotate(90deg); } 
+.process .c_tab_content .item ul.second li:nth-child(1):before { left: -4vw; right: auto; transform: translate(0, -50%) rotate(180deg); } 
+.process .c_tab_content .item ul.second li:nth-child(2):before { display: none; } 
+.process .c_tab_content .item ul.second li:nth-child(3) { visibility: hidden; } 
+.process .c_tab_content .item ul li span { display: flex; align-items: center; justify-content: center; width: 25.833vw; height: 16.666vw; font-size: 1.4rem; font-weight:500; line-height: 120%; color: #657C9C; text-align: center; } 
+.process .c_tab_content .item img { margin:0 auto 24px; border-radius: 10px; } 
+.process .c_tab_content .item p { font-size: 1.4rem; line-height: 160%; color: var(--basic-dark-navy); } 
+
+.news {display: flex;flex-direction: column;gap: 20px;margin:0 24px 120px;}
+.news .item{padding:20px;background-color:var(--grey07);border-radius: 10px;;}
+.news .item.on{border:1px solid var(--basic_blue);background-color:var(--white)}
+.news .item .text{display:block;height:78px;margin-bottom:30px;font-size: 1.6rem;font-weight: 500;line-height: 160%;color:var(--basic-dark-navy);}
+.news .item.on .text{color:var(--basic_blue);}
+.news .item.on .date{ font-size: 1.4rem;line-height: 160%;color:var(--grey01);}
+
 
 
 
@@ -565,6 +599,10 @@
 
  .business.energy ul { gap: 40px; } 
  .business.energy ul li .text p br, .business.energy .icon .sub_list li br { display: none; } 
+
+
+
+
  }
 
 @media (min-width: 768px) { /* main */ .main:after { padding-bottom:727px; } 
@@ -604,8 +642,10 @@
 
  .corporate .list .company_cont dl { width: calc(50% - 10px); } 
 
+ .news {flex-wrap: wrap;flex-direction: row;}
+ .news .item {width:41.7vw}
 
- }
+}
 
 /** WEB **/
 @media (min-width: 1024px){
@@ -821,7 +861,7 @@
  .footer.web .footer_bottom p { font-size: min(0.78vw,15px); line-height: 233%; color: var(--white); opacity: 0.6; } 
 
  /* sub */
- .sub_cont .breadcrumbs { display: block; position: absolute; top: 5.16041vw; right: 9.375vw;z-index: 1;} 
+ .sub_cont .breadcrumbs { display: block; position: absolute; top: 5.16041vw; right: 9.375vw; z-index: 1; } 
 
  .sub_cont .breadcrumbs ol { display: flex; gap: 1.35416vw; } 
 
@@ -900,7 +940,7 @@
 
  .vision .info dl dd { margin-top: 2.5625vw; } 
  
- .vision .info dl dd .sub_list .fs_13 {font-size: min(0.9375vw,18px);}
+ .vision .info dl dd .sub_list .fs_13 { font-size: min(0.9375vw,18px); } 
 
  .ceo { display: flex; margin-bottom: 6.25vw; padding: 6.302vw 9.375vw 6.8229vw; background: url(../../resources/img/sub/img_ceo_bg.jpg) no-repeat center; background-size: cover; } 
 
@@ -950,19 +990,19 @@
 
  .corporate .list .business_cont { display: flex; } 
 
- .corporate .list .business_cont dl { flex-direction: row;gap: 13.633vw; padding: 2.0833vw 2.34375vw; border-radius: 1.0416vw; } 
+ .corporate .list .business_cont dl { flex-direction: row; gap: 13.633vw; padding: 2.0833vw 2.34375vw; border-radius: 1.0416vw; } 
 
  .corporate .list .business_cont dl dt { font-size: min(0.9375vw,18px); } 
  
  .corporate .list .business_cont dl dd { font-size: min(0.9375vw,18px); } 
 
- .history1 { padding: 5.2083vw 13.5416vw; } 
+ .history1 { padding: 5.2083vw 0; } 
 
  .history1 .text { margin: 0 auto; } 
 
  .history1 .text p { font-size: min(1.25vw,24px); color: var(--basic-dark-navy); } 
 
- .history1 .slide { display: flex; gap: 2.6041vw; margin: 4.1666vw 0 0 0; } 
+ .history1 .slide { display: flex; justify-content: center; gap: 1.5625vw; margin: 4.1666vw 0 0 0; } 
 
  .history1 .slide .slide_item { display: flex; flex-direction: column; align-items: center; margin: 0 } 
 
@@ -1026,7 +1066,7 @@
 
  .contact .form .item dl.business_area dd .c_radio { width: 100%; } 
 
- .contact .form .item dl.business_area dd .c_radio.fs_13>input[type="radio"]+label {font-size: min(0.9375vw,18px);}
+ .contact .form .item dl.business_area dd .c_radio.fs_13>input[type="radio"]+label { font-size: min(0.9375vw,18px); } 
 
  .contact .c_btn_wrap { margin: 3.125vw auto 6.25vw; text-align: center; } 
 
@@ -1142,14 +1182,57 @@
  .sub_title2.chemical { background-position-x: center; } 
  .sub_title2.material .info { gap: 4.05vw; padding: 2.60416vw 3.125vw 3.9vw; } 
 
- .business.energy ul {column-gap: 0;}
+ .business.energy ul { column-gap: 0; } 
  .business.energy ul li, .business.energy ul li { align-items: flex-start; } 
  .business.energy ul li .text p br,
  .business.energy .icon .sub_list li br { display: block; } 
- }
+
+
+
+
+
+
+
+ .process { padding-bottom:6.25vw; } 
+ .process .c_tab_content { margin:4.7395vw 9.375vw 0; } 
+ .process .c_tab_content .item { gap: 0; display: flex; justify-content: left; } 
+ .process .c_tab_content .item:nth-child(n+2) { padding-top:11.3541vw; } 
+ .process .c_tab_content .item:nth-child(n+2):before { top:5.2083vw; } 
+ .process .c_tab_content .item > * { display: inline-block; } 
+ .process .c_tab_content .item b { width:23.9583vw; margin-bottom:0; font-size:min(1.5625vw,30px); line-height: 160%; } 
+ .process .c_tab_content .item ul { display: flex; column-gap: 2.5520vw; justify-content: left; margin-top: 0; } 
+ .process .c_tab_content .item ul.second { flex-direction: row; justify-content: flex-start; margin-left: 2.5520vw; } 
+ .process .c_tab_content .item ul li:nth-child(1):before,
+ .process .c_tab_content .item ul li:nth-child(2):before,
+ .process .c_tab_content .item ul li:nth-child(3):before { content:''; position:absolute; top:50%; right: -1.675vw; transform: translate(0,-50%); width:0.6770vw; height: 1.1458vw; } 
+ 
+ .process .c_tab_content .item ul li:nth-child(3):before { top: 50%; right: -1.675vw; transform: translate(0, -50%); } 
+ .process .c_tab_content .item ul.second li:nth-child(1):before { left: auto; right: -1.675vw; transform: translate(0, -50%); } 
+ .process .c_tab_content .item ul.second li:nth-child(2):before { display: none; } 
+ .process .c_tab_content .item ul.second li:nth-child(3) { display: none; } 
+ .process .c_tab_content .item ul li span { width: 9.375vw; height: 5.2083vw; font-size: min(1.04vw,20px) } 
+ .process .c_tab_content .item img { width:21.7708vw; margin:0 3.125vw 0 0; border-radius: 0.52083vw; } 
+ .process .c_tab_content .item p { font-size: min(1.04vw,20px) } 
+ 
+
+ .news {gap: 1.0416vw;margin:0 9.375vw 6.25vw;}
+ .news .item{width:22vw;padding:2.0833vw ;border-radius: 1.5625vw;;}
+ .news .item .text{height:5vw;margin-bottom:1.5625vw;font-size: min(1.04vw,20px);}
+ .news .item .date{  font-size: min(0.9375vw,18px)}
+
+ 
+
+
+
+
+
+
+
+
+}
 
 
  @keyframes opacityAni { 
-    from { opacity: 0; } 
-    to { opacity: 0.6; } 
+ from { opacity: 0; } 
+ to { opacity: 0.6; } 
  }
