--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -28,7 +28,7 @@ h3 {font-size: 1.17em;}
 h4 {font-size: 1em;}
 h5 {font-size: 0.83em;}
 
-
+/* 
 *::-webkit-scrollbar {
     width: 6px;
     height: 6px;
@@ -46,4 +46,4 @@ h5 {font-size: 0.83em;}
 
 *::-webkit-scrollbar-corner {
     background-color: transparent;
-}
+} */
