--- a/portfolio/resources/css/style.css
+++ b/portfolio/resources/css/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
-@import url("css/font.css");
-@import url("css/reset.css");
-@import url("css/common.css?v1.2");
-@import url("css/utils.css");
+@import url("../css/font.css");
+@import url("../css/reset.css");
+@import url("../css/common.css?v1.2");
+@import url("../css/utils.css");
 
 
 :root {
